# turntable

./: .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  DEVELOP.md  README.md  docker-compose.ci.yml  docker-compose.demo.yml  docker-compose.dev-internal.yml  docker-compose.dev-test.yml  docker-compose.dev.yml  docker-compose.juice.yml  docker-compose.staging.yml  docker-compose.yml  generate_keys.ps1  generate_keys.sh  myjfs.db  render.yaml
backend/: .gitignore  Dockerfile  _jwt.py  celerybeat-schedule  conftest.py  create_hatchet_db.sh  dev.sh  entrypoint-dev.sh  entrypoint.sh  predeploy.sh  pyproject.toml  test.json  test.py  test.yml
backend/ai/: embeddings.py
backend/ai/core/: chat.py  custom_litellm.py  instant_apply.py  models.py  prompts.py
backend/ai/documentation/: asset.py  dbt.py
backend/ai/tests/: test_ai.py  test_chat_inference.py  test_documentation.py  test_evals.py  test_intellisense.py
backend/api/: asgi.py  celery.py  serializers.py  settings.py  urls.py  utils.py  views.py
backend/app/: __init__.py  admin.py  apps.py  celery.py  consumers.py  signals.py  tasks.py  testing.py  websocket_auth.py
backend/app/consumers/: __init__.py  ai_chat_consumer.py  chat_inference_consumer.py  dbt_command_consumer.py  instant_apply_consumer.py  task_result_consumer.py  workflow_run_consumer.py
backend/app/core/: db_methods.py  dbt.py  dbt_methods.py  e2e.py  lineage.py  serialization.py
backend/app/migrations/: 0001_initial.py  0002_alter_dbtcoredetails_other_schemas.py  0002_assetembedding.py  0002_dbtcoredetails_deploy_key_and_more.py  0002_ingesterror.py  0003_alter_column_name.py  0003_alter_dbtcoredetails_git_repo_url.py  0003_alter_ingesterror_id.py  0003_resourcedetails_dbtresource_sshkey_workflowrun_and_more.py  0004_alter_column_name.py  0004_alter_metabasedetails_connect_uri.py  0004_asset_is_indirect_column_is_indirect.py  0005_alter_column_asset.py  0005_alter_column_type.py  0005_databricksdetails.py  0005_merge_20240823_1507.py  0005_workspacesetting.py  0006_alter_column_type.py  0006_remove_snowflakedetails_database_and_more.py  0006_tableaudetails.py  0006_user_active_workspace.py  0006_workspacesetting_app_workspa_name_91f1ad_idx.py  0007_alter_workspace_id.py  0007_assetcontainer_asset_containers.py  0007_remove_repository_resource_repository_resources_and_more.py  0007_tableaudetails.py  0007_workspace_config_workspacesettings.py  0008_alter_asset_resource_alter_asset_workspace_and_more.py  0008_alter_dbtcoredetails_version.py  0008_alter_workspace_id_assetcontainer_and_more.py  0008_assetcontainer_asset_containers.py  0008_remove_repository_resources_repository_resource.py  0009_alter_asset_id_alter_assetcontainer_id_and_more.py  0009_alter_dbtcoredetails_version.py  0009_redshiftdetails_alter_dbtcoredetails_version.py  0009_resource_parent_resource.py  0010_alter_asset_type.py  0010_convert_workspace_id_to_autofield.py  0010_credentials_lookercredentials.py  0010_redshiftdetails.py  (+79 more)
backend/app/models/: __init__.py  auth.py  editor.py  git_connections.py  metadata.py  notebook.py  project.py  query.py  repository.py  resources.py  settings.py  ssh_key.py  user.py  workflows.py  workspace.py
backend/app/services/: asset_service.py  code_repo_service.py  embedding_service.py  gen_ai_service.py  github_service.py  lineage_service.py  query_service.py  resource_service.py  source_service.py  storage_backends.py
backend/app/utils/: database.py  df.py  django_helpers.py  email.py  encoding.py  environment.py  fields.py  obj.py  process.py  queryset.py  test_utils.py  url.py  urn.py
backend/app/views/: __init__.py  asset_views.py  block_views.py  chat_view.py  column_views.py  embedding_views.py  eval_views.py  github_installation_views.py  healthcheck_views.py  inference_views.py  invitation_views.py  lineage_views.py  notebook_views.py  orchestration_views.py  project_views.py  query_views.py  resource_views.py  schema_views.py  settings_view.py  ssh_views.py  stream.py  webhook_views.py  workflow_views.py  workspace_group_views.py  workspace_setting_views.py  workspace_views.py
backend/app/workflows/: metadata.py  orchestration.py  query.py  utils.py
backend/datastore/: development.py  supabase_client.py  users.py
backend/fixtures/: local_env.py  staging_env.py
backend/fixtures/datahub_dbs/: metabase.duckdb  postgres.duckdb
backend/hatchet_initialization/: Dockerfile  create_db.py
backend/install/: dbt_install.py  dbt_versions.py
backend/intellisense/ast/: completion.py
backend/intellisense/syntax/: run_scrape.py  scrapers.py  utils.py
backend/internal_project/: __init__.py  resources.py
backend/internal_project/models/: other.py
backend/scripts/: build_lineage.py  create_policies_sql.py  encrypt_secret.py  generate_reference.py  hatchetdev.py  metadata_in_server.py  pickle_project.py  requirements.txt  run_metadata_ingest.py  set_pyproject.py  set_python_version.py  start_docker.py  start_flower.py
backend/scripts/debug/: profiling.py  test_endpoint.py
backend/server_dependencies/: tenant_authorization.py
backend/supabase/: DEVELOP.md  config.toml
backend/supabase/migrations/: 20240501194913_remote_schema.sql  20240522223457_remote_schema.sql  20240522224941_remote_schema.sql  20240522225105_remote_schema.sql  20240523181501_remote_schema.sql  20240523195213_remote_schema.sql  20240527134656_remote_schema.sql  20240527134814_remote_schema.sql  20240602154149_remote_schema.sql  20240607182113_remote_schema.sql  20240607215826_remote_schema.sql  20240610213222_remote_schema.sql
backend/supabase/scripts/: pull.sh
backend/tasks/: orchestration.py
backend/tasks/tests/: test_orchestration.py
backend/tests/: test_resource_connections.py
backend/under_construction/: ai.py  prompts.py
backend/vinyl/: DEVELOP.md  README.md  __init__.py  chart.py  connect.py  constructors.py  examples.py  operations.py  pyproject.toml
backend/workflows/: dbt_runner.py  execute_dbt_query.py  execute_query.py  execute_query_DEPRECATED.py  generate_cron_jobs.py  get_lineage.py  hatchet.py  main.py  metadata_sync.py
(+702 files in other folders)
